0.2.1-beta.1
- 2022-12-06 Metadata way & welcome to 0.2.1-xxx not directly backward compatiable


0.2.0-beta.5
- Fetch tree data inside TreeNode(so removed 'data' prop)
- Put all components export under digimaker-ui, digimaker-ui/actions, digimaker-ui/view

0.2.0-beta.4
- Added Main for main page example
- Browse onConfirm callback supporting return false to prevent hiding dialog
- FetchWithAuth supports like url like 'content/get/3' with full url
- Support util.setRefreshToken( token )