@@ -174,6 +174,8 @@ let config:any = null;
 
 //util for general operations
 const util = {
+  dateTime:{},
+
   //put replace variable with real value.eg. "this is {id}" with {'id': 5} will be "this is 5"
   washVariables:(str:string, values:any)=>{
    let variables = str.match(/{(\w+|_)}/g);
